crate/lib/sinex-primitives/tests/proof_compile_fail/missing_material.stderr
error[E0599]: no method named `build` found for struct `RuntimeUnitDescriptorBuilder<HasOutput, HasPrivacy, MissingMaterial, CheckpointPresent>` in the current scope
  --> tests/proof_compile_fail/missing_material.rs:13:6
   |
 4 |       let _ = RuntimeUnitDescriptor::builder(
   |  _____________-
 5 | |         subject_ref!("runtime_unit:test.missing_material"),
 6 | |         "test.missing_material",
 7 | |         "test",
...  |
12 | |     .checkpoint_policy("row_id")
13 | |     .build();
   | |     -^^^^^ method not found in `RuntimeUnitDescriptorBuilder<HasOutput, HasPrivacy, MissingMaterial, CheckpointPresent>`
   | |_____|
   |
   |
   = note: the method was found for
           - `RuntimeUnitDescriptorBuilder<HasOutput, HasPrivacy, HasMaterial, CheckpointPresent>`
